<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_capture_options">

        <ListPreference
            android:defaultValue="1"
            android:key="u"
            android:title="@string/pref_title_capture_resolution"
            android:persistent="true"
            android:selectable="true"
            android:entries="@array/capture_resolution_names"
            android:entryValues="@array/settings_values"
            android:dialogTitle="@string/dialog_title_camera_resolutions"
            />

        <ListPreference
            android:defaultValue="0"
            android:key="q"
            android:title="@string/pref_title_capture_position"
            android:persistent="true"
            android:selectable="true"
            android:entries="@array/capture_position_names"
            android:entryValues="@array/settings_values"
            android:dialogTitle="@string/dialog_title_camera_positions"
            />


        <ListPreference
            android:defaultValue="0"
            android:key="r"
            android:title="@string/pref_title_capture_storage"
            android:persistent="true"
            android:entries="@array/capture_storage_names"
            android:entryValues="@array/settings_values"
            android:dialogTitle="@string/dialog_title_storage_devices"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_title_view_options">

        <ListPreference
            android:defaultValue="0"
            android:key="s"
            android:title="@string/pref_title_view_zoom"
            android:persistent="true"
            android:entries="@array/view_zoom_names"
            android:entryValues="@array/settings_values"
            android:dialogTitle="@string/dialog_title_zoom_levels"/>
        <ListPreference
            android:defaultValue="0"
            android:key="t"
            android:title="@string/pref_title_parallax_adjustment"
            android:persistent="true"
            android:entries="@array/view_parallax_names"
            android:entryValues="@array/settings_values"
            android:dialogTitle="@string/dialog_title_parallax_adjustments"/>
    </PreferenceCategory>

</PreferenceScreen>
