<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_thumb_view"
        android:icon="@drawable/ic_view_comfy_white_24dp"
        android:title="@string/action_thumb_view"
        app:showAsAction="always" />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_anaglyph"
                    android:icon="@drawable/ic_red_cyan"
                    android:title="@string/action_anaglyph_redcyan" />
                <item android:id="@+id/action_sbs"
                    android:icon="@drawable/ic_parallel_eye_white"
                    android:title="@string/action_sbs_parallel"/>
                <item android:id="@+id/action_3dtv"
                    android:icon="@drawable/ic_3dtv_white"
                    android:title="@string/action_3dtv"/>
            </group>
            <group android:checkableBehavior="all">
                <item android:id="@+id/action_swap"
                    android:layout_gravity="center"
                    android:title="@string/action_swap"/>
                <item android:id="@+id/action_grayscale"
                    android:layout_gravity="center"
                    android:title="@string/action_grayscale"/>
            </group>
        </menu>
    </item>
</menu>